# myaxumserver

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  envoy-custom.yaml  redis.sources.list  tidb_custom.sh  tidb_custom.yaml
arpy-axum-common/: Cargo.toml
arpy-axum-common/src/: lib.rs
arpy-axum-server/: Cargo.toml
arpy-axum-server/src/: main.rs
letter-avatar/: Cargo.toml
letter-avatar/src/: lib.rs
libauth/: Cargo.toml
libauth/src/: bearer_jwt.rs  claims.rs  cookie.rs  error.rs  lib.rs  test.rs
libconfig/: Cargo.toml
libconfig/src/: lib.rs  myconfig.rs
libdatabase/: Cargo.toml
libdatabase/src/: db_model.rs  lib.rs  mysql.rs  redis.rs
libdatabase/tests/: mysql_test.rs
liberror/: Cargo.toml
liberror/src/: lib.rs  my_error.rs
libglobal_request_id/: Cargo.toml
libglobal_request_id/src/: global_request_id_model.rs  lib.rs
libgrpc/: Cargo.toml
libgrpc/src/: admin_server.rs  calculator_server.rs  category_server.rs  lib.rs  login_server.rs  main.rs  topic_server.rs
libgrpc/tests/: admin_srv_test.rs  calculator_srv_test.rs  category_srv_test.rs  login_srv_test.rs  topic_srv_test.rs
libhybrid/: Cargo.toml
libhybrid/src/: hybrid.rs  lib.rs
libjsandbox/: Cargo.toml
libjsandbox/src/: args.rs  lib.rs  runtime.js  script.rs
libjsandbox/tests/: output_01.js  runtime.js  test_call.rs
libproto/: Cargo.toml  build.rs
libproto/proto/: admin.proto  calculator.proto  category.proto  jwt.proto  login.proto  topic.proto
libproto/src/: admin.rs  calculator.rs  category.rs  jwt.rs  lib.rs  login.rs  topic.rs
libtracing/: Cargo.toml
libtracing/src/: lib.rs  my_tracing.rs
libwasm/: Cargo.toml  LICENSE_MIT
libwasm/src/: lib.rs
metaforge/: Cargo.toml
metaforge/conf/: conf.toml  conf_local_dev.toml  conf_local_docker.toml  conf_windows.toml
metaforge/db_scripts/: metaforge_db.sql
metaforge/examples/rust_to_js/: async-case.js  do_from_file.js  do_has_param_func.js  example.ts  how-long-till-lunch.esm.js  how-long-till-lunch.umd.js  js_do_rust.js  my_module.js  my_module.mjs  output_02.js  output_03.js  output_04.js  output_05.js  output_06.js  runtime.js  rust_to_js.rs
metaforge/src/: lib.rs  main.rs
metaforge/src/auth/: bearer_jwt.rs  claims.rs  grpc_check_jwt.rs  jwt_secret.rs  mod.rs  password.rs  test.rs
metaforge/src/config/: mod.rs  myconfig.rs
metaforge/src/database/: mysql.rs  redis.rs
metaforge/src/grpc_server/: admin_server.rs  calculator_server.rs  category_server.rs  jwt_server.rs  login_server.rs  main.rs  mod.rs  topic_server.rs
metaforge/src/handler/: mod.rs
metaforge/src/handler/file_upload_handler/: mod.rs  upload_file_handler.rs
metaforge/src/handler/jwt_handler/: my_jwt_handler.rs
metaforge/src/handler/mysql_handler/: mod.rs  my_mysql_handler.rs
metaforge/src/handler/other_handler/: mod.rs  my_other_handler.rs
metaforge/src/handler/user_manager_handler/: mod.rs  user_handler.rs  user_model.rs
metaforge/src/js_deno/: deno.rs
metaforge/src/model/: global_const.rs  message.rs  mod.rs  my_request_id.rs
metaforge/src/my_tracing/: mod.rs
metaforge/src/util/: grpc_check_jwt.rs  mod.rs
metaforge/src/utils/: utils.rs
metaforge/templates/: login.html  main.html  redirect.html  upload_file.html
metaforge/tests/: HTTP-Request.http  admin_srv_test.rs  calculator_srv_test.rs  category_srv_test.rs  grpc.http  login_srv_test.rs  test_01.rs  test_avatar.rs  test_num_cpu.rs  topic_srv_test.rs
myauth/: Cargo.toml
myauth/src/: lib.rs
myfront/: Cargo.toml
myfront/examples/: ex01.rs
myfront/my_default_macro_derive/: Cargo.toml
myfront/my_default_macro_derive/src/: lib.rs
myfront/src/: error.rs  handler.rs  jwt.rs  lib.rs  main.rs  main_util.rs  my_request_id.rs  my_tracing.rs  mysql.rs  redis.rs  session.rs  share.rs  template.rs  upload_file.rs
myfront/src/auth/: bearer_jwt.rs  claims.rs  cookie.rs  mod.rs
myfront/src/database/: mod.rs  model.rs  mysql.rs  redis.rs
myfront/src/error/: my_error.rs
myfront/src/global_request_id/: mod.rs  model.rs  my_request_id.rs
myfront/src/handler/: file_upload_handler.rs  jwt_handler.rs  mysql_handler.rs  other_handler.rs  user_manager_handler.rs
myfront/src/handler/file_upload_handler/: handler.rs  mod.rs  upload_file_model.rs
myfront/src/handler/jwt_handler/: handler.rs  jwt_model.rs  mod.rs  my_jwt_handler.rs
myfront/src/handler/mysql_handler/: handler.rs  my_mysql_handler.rs
myfront/src/handler/other_handler/: mod.rs  my_other_handler.rs
myfront/src/handler/user_manager_handler/: handler.rs  mod.rs  user_handler.rs  user_model.rs
myfront/src/middleware/: mod.rs  my_middleware.rs
myfront/src/session/: mod.rs  user_session.rs
myfront/src/template/: login_template.rs  main_template.rs  mod.rs  upload_file_template.rs
myfront/src/tracing/: mod.rs  my_tracing.rs
myfront/static/: main.html  wasm.html
myfront/templates/: login.html  main.html  upload_file.html
myfront/tests/: HTTP-Request.http
myrspc/: Cargo.toml
myrspc/src/: main.rs
