[workspace]
resolver = "2" # resolver字段用于配置依赖项解析器的版本，这里使用2版本
members = [
    "libconfig",
    "libdatabase",
    "libproto",
    "libwasm",
    "metaforge"
]

[profile.release.package.libwasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
