[package]
name = "arpy-axum-common"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arpy = { version = "0.2.0"}
serde = { version = "1.0.152"}
futures = { version = "0.3.25"}
tokio-stream = { version = "0.1.11"}
