[package]
name = "arpy-axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.3", features = ["ws","headers"] }
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

arpy = { version = "0.2.0"}
arpy-server = { version = "0.2.0"}
arpy-axum = { version = "0.2.0"}
arpy-axum-common = { path = "../arpy-axum-common",version = "0.2.0"}
