[package]
name = "letter-avatar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pango = "0.15.1"
pangocairo = "0.15.1"
unicode-segmentation = "1.8.0"
cairo-rs = { version = "0.15.1", features = ["png"] }