[package]
name = "libauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 日期与时间处理
chrono = { version = "0.4.31", features = [] }
# JWT 生成与解析
jsonwebtoken = "9.1.0"
# 声明惰性加载的静态数据
lazy_static = { version = "1.4.0", features = [] }
# 序列化与反序列化
serde = { version = "1.0.193", features = ["derive"] }
# JSON 序列化与反序列化
serde_json = "1.0.108"
# 基于 tokio 的 Web 框架
axum = { version = "0.7.1", features = ["multipart"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
# 自定义错误类型
thiserror = "1.0.50"
