[package]
name = "libdatabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Sea ORM库依赖，必须启用 sqlx-mysql + runtime-tokio-native-tls 特性才能连接 MySQL 数据库
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
# 异步 SQL 工具包
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls" , "mysql", "bigdecimal" ] }
# 序列化与反序列化依赖
serde = { version = "1.0", features = ["derive"] } # 序列化与反序列化
# Redis 数据库连接池
deadpool-redis = { version = "0.14", features = ["serde"] }
anyhow = "1"
serde_json = "1" # 日志处理
# SQL 解析
sqlparser = "0.46"
# 日期时间处理
chrono = { version = "0.4" }   # for date and time
# 金额计算(sqlx-mysql v0.7.3 依赖于 bigdecimal v0.3.0)
bigdecimal = { version = "0.3", features = ["serde"] } # 处理货币金额
# 为了使用 tokio::test 宏
tokio-macros = { version = "2.2.0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] } # Rust 异步运行时