[package]
name = "libglobal_request_id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# UUID 依赖库，生成全局唯一请求ID
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics"] } # uuid依赖库
# Tower HTTP 中间件依赖
tower-http = { version = "0.5", features = ["full"] } # HTTP 中间件支持
# Axum Web框架依赖，headers 处理请求头，multipart 处理文件上传
axum = { version = "0.7", features = [] } # 基于 tokio 的 Web 框架
axum-extra = { version = "0.9", features = ["typed-header"] } # Axum Web框架扩展工具集