[package]
name = "libgrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
prost = "0.12"
prost-types = "0.12"
tonic = "0.11"
rand = "0.8"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls" , "mysql", "chrono" ] }
# 日期时间处理
chrono = "0.4"   # for date and time
# 认证模块：密码处理
libauth = {path = "../libauth"}
# proto 模块
libproto = {path = "../libproto"}
# grpc stream 服务依赖
tokio-stream = {version = "0.1", features = []}

[dev-dependencies]
rand = "0.8"