[package]
name = "libhybrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
futures = "0.3"
hyper = { version = "1.0.0", features = ["full"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10" }
tonic-reflection = "0.10"
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
