[package]
name = "libproto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rust 语言的 Protocol Buffers 实现。
prost = { workspace = true }
# 定义 Protocol Buffers 中类型在 Rust 里的对应类型。与 prost 库一起使用。
prost-types = { workspace = true }
# Rust 实现的一个高性能、开源、通用的 RPC 框架。这个用于生成 grpc 客户端与服务端代码。
tonic = { workspace = true }

[build-dependencies]
# tonic-build 通过 prost 编译 proto 文件并生成服务存根和原型定义以与 tonic 一起使用。
tonic-build = { workspace = true }