[package]
name = "libtracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tracing 日志框架依赖
chrono = "0.4"   # for date and time
tracing = "0.1"  # 日志框架
tracing-appender = "0.2"  # 日志输出器
tracing-subscriber = "0.3"# 日志订阅器